# video_segment

./: .gitignore  .gitmodules  README.md
base/: README.md  base_clock.h
cmake/: FindFFTW.cmake  FindLIBM.cmake  common.cmake
intrinsic/: CMakeLists.txt  retinex_pde_unit.cpp  retinex_pde_unit.h
retinex_pde/: CMakeLists.txt  depend.cmake  retinex_pde_unit.cpp  retinex_pde_unit.h
seg_tree_minimal/: CMakeLists.txt  seg_tree.cpp
segment_renderer/: renderer.cpp
segment_util/: README.md  segmentation_render.h
segmentation/: README.md  dense_segmentation.cpp  dense_segmentation.h  dense_segmentation_graph.h  segmentation_graph.h  segmentation_unit.cpp
video_framework/: CMakeLists.txt  README.md  concurrent_queue.h  conversion_units.cpp  conversion_units.h  video_image_writer_unit.cpp  video_image_writer_unit.h  video_pipeline.cpp  video_pipeline.h  video_reader_unit.cpp  video_reader_unit.h  video_unit.cpp  video_unit.h  video_writer_unit.cpp
video_image_writer/: CMakeLists.txt  video_image_writer.cpp
video_intrinsic_image_writer/: CMakeLists.txt  depend.cmake  video_intrinsic_image_writer.cpp
video_intrinsic_video_writer/: CMakeLists.txt  video_intrinsic_video_writer.cpp
video_reader_writer/: CMakeLists.txt  depend.cmake  video_reader_writer.cpp
